# forster-todo

./: Cargo.toml  LICENSE  README.md
src/: app.rs  fvp.rs  main.rs  session.rs  storage.rs  task.rs  ui.rs  web.rs
src/web/: index.html
