[package]
name = "forster-todo"
version = "0.1.0"
edition = "2024"
authors = ["Tim Boldt <tim.boldt@gmail.com>"]
description = "A terminal task manager implementing Mark Forster's Final Version Perfected (FVP) methodology"
license = "MIT"
readme = "README.md"
keywords = ["tui", "todo", "fvp", "productivity", "task-manager"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.103"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
crossterm = "0.29.0"
directories = "6.0.0"
ratatui = "0.30.2"
tiny_http = "0.12.0"

[dev-dependencies]
tempfile = "3.27.0"
